--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="container">
-            <footer class="bg-[#659f8f] dark:bg-[#313131]">
-                <div class="container px-6 py-12 mx-auto">
-                    <div class="grid">
-                        <div class="sm:col-span-2">
-                            <h1 class="max-w-lg" >Subscribe.</h1>
-                            <div class="flex">
-                                <input id="email" type="text">
-                                <button class="w-full px-6 py-2.5 bg-white">
-                                    Subscribe
-                                </button>
-                            </div>
-                        </div>
+    <footer class="bg-[#659f8f]">
+        <div class="container p-[10%]">
+            <div class="lg:flex">
+                <div class="w-full lg:pr-[10px] lg:w-[50%] xl:w-[50%]">
+                    <h1 class="text-[18px] font-medium pb-[15px]" >Subscribe to our newsletter for updates.</h1>
+                    <div class="md:flex md:gap-4 md:pb-[30px]">
+                        <input placeholder="Email Adress" class="mb-2 w-full p-2 rounded-[5px] md:w-[210px] md:p-1 lg:w-[180px]" id="email" type="text">
+                        <button class="mb-5 p-2 w-full bg-[#d86943] text-white rounded-[5px] text-[15px] font-medium text-[11px] md:mb-2 md:p-1 md:w-[120px] md:text-[11px] lg:w-[100px]">Subscribe</button>
+                    </div>
+                </div>
                         <div>
                             <p class="text-[#313131]">Quick Link</p>
                             <div class="flex">
