Added another container for quick link and technologies
Added another container for specifically the "quick link" and "technologies" section to easily manipulate both. Added stylings and media queries for the quick link section and it's content.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
                         <button class="mb-5 p-2 w-full bg-[#d86943] text-white rounded-[5px] text-[15px] font-medium text-[11px] md:mb-2 md:p-1 md:w-[120px] md:text-[11px] lg:w-[100px]">Subscribe</button>
                     </div>
                 </div>
-                        <div>
-                            <p class="text-[#313131]">Quick Link</p>
-                            <div class="flex">
-                                <a href="#">Home</a>
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
-                            </div>
-                        </div>
+    <div class=" md:flex-grid md:columns-2 md:justify-between">
+                <div class="pb-[30px] pb-[0px] lg:pl-[50px] lg:w-full">
+                    <p class="text-[#313131] font-semibold pb-[10px]">Quick Link</p>
+                    <div class="flex">
+                    <ul class="">
+                        <li class="pb-[5px]"><a href="#">Home</a></li>
+                        <li class="pb-[5px]"><a href="#">Who We Are</a></li>
+                        <li class="[5px]"><a href="#">Our Philosophy</a></li>
+                    </ul>
+                    </div>
+                </div>
                         <div>
                             <p class="text-[#313131]">Technologies</p>
                             <div class="">
