Added stylings for "technologies" section
Added stylings and media queries for "technologies" section, adding a list as well

--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                     </ul>
                     </div>
                 </div>
-                        <div>
-                            <p class="text-[#313131]">Technologies</p>
-                            <div class="">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
-                            </div>
-                        </div>
+          <div class="md:pr-[25%] lg:pl-[100px] w-[35%]">
+                    <p class="text-[#313131] font-semibold pb-[10px]">Technologies</p>
+                    <div class="">
+                    <ul>
+                        <li class="pb-[5px]"><a href="">HTML</a></ll>
+                        <li class="pb-[5px]"><a href="">CSS</a></li>
+                        <li class="pb-[5px]"><a href="">Javascript</a></li>
+                    </ul>
                     </div>
-                    
+                </div>
+            </div>
+        </div>
                     <hr class="my-6 border-[#d86943]">
                     
                     <div class="flex">
