Added icons and stylings
Added stylings and stylings with hover effect and media queries to reduce size on small screens

--- a/index.html
+++ b/index.html
@@ -41,14 +41,19 @@
                     </div>
                 </div>
             </div>
-        </div>
-    <hr class="my-6 border-[#d86943]">
-                <div class="flex">
-                    <a href="#">
-                    <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
-                    </a>
-                </div>
-            </hr>
+                <hr class="my-6 border-[#d86943]">
+                    <div class="">
+                        <a href="#">
+                            <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
+                        </a>
+                        <div class="float-right">
+                            <a href="https://www.facebook.com/codespaceza" class="fa fa-facebook text-[#d86943] rounded-[5px] p-[5px] hover:text-[#659f8f] hover:bg-[#d86943] md:text-[25px]"></a>
+                            <a href="http://instagram.com/codespaceza" class="fa fa-instagram text-[#d86943] rounded-[5px] p-[5px] hover:text-[#659f8f] hover:bg-[#d86943] md:text-[25px]"></a>
+                            <a href="https://codespace.ams3.cdn.digitaloceanspaces.com/wp/assets/website/icons/svg/socials/linkedin.svg" class="fa fa-linkedin text-[#d86943] rounded-[5px] p-[5px] hover:text-[#659f8f] hover:bg-[#d86943] md:text-[25px]"></a>
+                            <a href="https://www.youtube.com/channel/UCfmXJliguiwBv2QlRzWdrxA" class="fa fa-youtube text-[#d86943] rounded-[5px] p-[5px] hover:text-[#659f8f] hover:bg-[#d86943] md:text-[25px]"></a>
+                        </div>
+                    </div>
+                </hr>
         </div>
     </footer>
 
