--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
                         <button class="mb-5 p-2 w-full bg-[#d86943] text-white rounded-[5px] text-[15px] font-medium text-[11px] md:mb-2 md:p-1 md:w-[120px] md:text-[11px] lg:w-[100px]">Subscribe</button>
                     </div>
                 </div>
-    <div class=" md:flex-grid md:columns-2 md:justify-between">
-                <div class="pb-[30px] pb-[0px] lg:pl-[50px] lg:w-full">
-                    <p class="text-[#313131] font-semibold pb-[10px]">Quick Link</p>
-                    <div class="flex">
-                    <ul class="">
-                        <li class="pb-[5px]"><a href="#">Home</a></li>
-                        <li class="pb-[5px]"><a href="#">Who We Are</a></li>
-                        <li class="[5px]"><a href="#">Our Philosophy</a></li>
-                    </ul>
+                <div class=" md:flex-grid md:columns-2 md:justify-between">
+                    <div class="pb-[30px] pb-[0px] lg:pl-[50px] lg:w-full">
+                        <p class="text-[#313131] font-semibold pb-[10px]">Quick Link</p>
+                        <div class="flex">
+                            <ul class="">
+                                <li class="pb-[5px] hover:text-[#d86943] "><a href="#">Home</a></li>
+                                <li class="pb-[5px] hover:text-[#d86943] "><a href="#">Who We Are</a></li>
+                                <li class="[5px] hover:text-[#d86943] "><a href="#">Our Philosophy</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-          <div class="md:pr-[25%] lg:pl-[100px] w-[35%]">
-                    <p class="text-[#313131] font-semibold pb-[10px]">Technologies</p>
-                    <div class="">
-                    <ul>
-                        <li class="pb-[5px]"><a href="">HTML</a></ll>
-                        <li class="pb-[5px]"><a href="">CSS</a></li>
-                        <li class="pb-[5px]"><a href="">Javascript</a></li>
-                    </ul>
+                    <div class="md:pr-[25%] lg:pl-[100px] w-[35%]">
+                        <p class="text-[#313131] font-semibold pb-[10px]">Technologies</p>
+                            <div class="">
+                                <ul>
+                                    <li class="pb-[5px] hover:text-[#d86943] "><a href="">HTML</a></ll>
+                                    <li class="pb-[5px] hover:text-[#d86943] "><a href="">CSS</a></li>
+                                    <li class="pb-[5px] hover:text-[#d86943] "><a href="">Javascript</a></li>
+                                </ul>
+                            </div>
                     </div>
                 </div>
             </div>
