Changed div to form and types to match

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="lg:flex">
                 <div class="w-full lg:pr-[10px] lg:w-[50%] xl:w-[50%]">
                     <h1 class="text-[18px] font-medium pb-[15px]" >Subscribe to our newsletter for updates.</h1>
-                    <div class="md:flex md:gap-4 md:pb-[30px]">
-                        <input placeholder="Email Adress" class="mb-2 w-full p-2 rounded-[5px] md:w-[210px] md:p-1 lg:w-[180px]" id="email" type="text">
-                        <button class="mb-5 p-2 w-full bg-[#d86943] text-white rounded-[5px] text-[15px] font-medium text-[11px] md:mb-2 md:p-1 md:w-[120px] md:text-[11px] lg:w-[100px]">Subscribe</button>
-                    </div>
+                    <form class="md:flex md:gap-4 md:pb-[30px]">
+                        <input placeholder="Email Adress" class="mb-2 w-full p-2 rounded-[5px] md:w-[210px] md:p-1 lg:w-[180px]" type="email">
+                        <button type="sumbit" class="mb-5 p-2 w-full bg-[#d86943] text-white rounded-[5px] text-[15px] font-medium text-[11px] md:mb-2 md:p-1 md:w-[120px] md:text-[11px] lg:w-[100px]">Subscribe</button>
+                    </form>
                 </div>
                 <div class=" md:flex-grid md:columns-2 md:justify-between">
                     <div class="pb-[30px] pb-[0px] lg:pl-[50px] lg:w-full">
